--- a/css/style.css
+++ b/css/style.css
@@ -130,12 +130,19 @@ body {
   font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.02em;
+}
+
+.link-navi {
   color: var(--secondary-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link {
   color: var(--primary-text-color);
   fill: var(--primary-text-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-icon {
@@ -221,11 +228,12 @@ body {
 
   letter-spacing: 0.06em;
   color: var(--logo-bgr-color);
-}
-.btn {
+
   background: var(--weblog-btn-link);
   box-shadow: 0px 4px 4px var(--btn-box);
   border-radius: 4px;
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:focus {
@@ -404,6 +412,8 @@ body {
   border: none;
   border-radius: 50%;
   background-color: var(--logo-bgr-color) 10%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -424,6 +434,12 @@ body {
 .clnt-flexcont .clnt-element:nth-child(6n) {
   margin-right: 0px;
 }
+
+.clnt-element {
+  display: flex;
+  align-items: center;
+}
+
 .clnt-element .link {
   display: flex;
   border: 1px solid var(--clnt-bord);
@@ -432,15 +448,15 @@ body {
   height: 90px;
   align-items: center;
   justify-content: center;
-}
-.clnt-element {
-  display: flex;
-  align-items: center;
+  fill: var(--clnt-bord);
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clnt-element .link:hover {
   border: 1px solid var(--weblog-btn-link);
-  --color4: var(--weblog-btn-link);
+  fill: var(--weblog-btn-link);
+  
 }
 
 /* Портфолио */
@@ -449,7 +465,12 @@ body {
   font-size: 16px;
   line-height: 1.625;
   letter-spacing: 0.03em;
+  
   color: var(--secondary-color);
+  background: var(--bgr-sectteam);
+  border-radius: 4px;
+
+  transition: background 2250ms cubic-bezier(0.4, 0, 0.2, 1), color 2250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-sect {
@@ -466,8 +487,11 @@ body {
 
 .filters .item {
   display: flex;
+  /* color: var(--secondary-color);
   background: var(--bgr-sectteam);
-  border-radius: 4px;
+  border-radius: 4px; */
+
+  
 }
 
 .filters .item:hover,
@@ -608,6 +632,8 @@ body {
   line-height: 1.7143;
   letter-spacing: 0.03em;
   color: var(--logo-bgr-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contacts {
   color: var(--footer-contact);
@@ -679,10 +705,15 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+
+  transform: scale(100%,100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
+  transform: scale(0,0);
+  /* opacity: 0; */
   pointer-events: none;
 }
 .modal {
