--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,8 @@ body {
   color: var(--primary-text-color);
   fill: var(--primary-text-color);
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-icon {
@@ -413,8 +414,8 @@ body {
   border-radius: 50%;
   background-color: var(--logo-bgr-color) 10%;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-link:hover {
@@ -450,13 +451,13 @@ body {
   justify-content: center;
   fill: var(--clnt-bord);
 
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clnt-element .link:hover {
   border: 1px solid var(--weblog-btn-link);
   fill: var(--weblog-btn-link);
-  
 }
 
 /* Портфолио */
@@ -465,12 +466,20 @@ body {
   font-size: 16px;
   line-height: 1.625;
   letter-spacing: 0.03em;
-  
+  padding: 6px 22px;
+
   color: var(--secondary-color);
   background: var(--bgr-sectteam);
   border-radius: 4px;
 
-  transition: background 2250ms cubic-bezier(0.4, 0, 0.2, 1), color 2250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.filter:hover,
+.filter:focus,
+.filter:active {
+  color: var(--logo-bgr-color);
+  background: var(--weblog-btn-link);
 }
 
 .portfolio-sect {
@@ -490,21 +499,6 @@ body {
   /* color: var(--secondary-color);
   background: var(--bgr-sectteam);
   border-radius: 4px; */
-
-  
-}
-
-.filters .item:hover,
-.filters .item a:hover,
-.filters .item:focus,
-.filters .item a:focus,
-.filters .item:active,
-.filters .item a:active {
-  color: var(--logo-bgr-color);
-  background: var(--weblog-btn-link);
-}
-.filters .filter {
-  padding: 6px 22px;
 }
 
 .filters .item + .item {
@@ -524,7 +518,6 @@ body {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   cursor: pointer;
-  
 }
 
 .potrfol-flex .item:nth-child(3n) {
@@ -556,13 +549,11 @@ body {
   color: var(--logo-bgr-color);
   padding: 63px 24px;
 
-  
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .potrfol-flex .item:hover .hover-over {
-  
   transform: translatey(0);
 }
 
@@ -666,7 +657,7 @@ body {
   height: 44px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  --color4: var(--logo-bgr-color)
+  --color4: var(--logo-bgr-color);
 }
 
 .footsoc-block a:not(:last-child) {
@@ -706,13 +697,12 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
 
-  transform: scale(100%,100%);
+  transform: scale(100%, 100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .backdrop.is-hidden {
-  transform: scale(0,0);
+  transform: scale(0, 0);
   /* opacity: 0; */
   pointer-events: none;
 }
