--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
 
   font-weight: bold;
   font-size: 16px;
-  line-height: 1.875x;
+  line-height: 1.875;
 
   letter-spacing: 0.06em;
   color: var(--logo-bgr-color);
@@ -233,6 +233,7 @@ body {
   background: var(--weblog-btn-link);
   box-shadow: 0px 4px 4px var(--btn-box);
   border-radius: 4px;
+  cursor: pointer;
 
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -697,20 +698,20 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
 
-  transform: scale(100%, 100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  transform: scale(0, 0);
-  /* opacity: 0; */
+  
+  opacity: 0;
   pointer-events: none;
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1, 1);
 
   min-width: 528px;
   min-height: 581px;
@@ -719,12 +720,23 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.3, 0.3);
+}
+
 .btn-modal {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-left: auto;
   width: 30px;
   height: 30px;
+  
   background: var(--logo-bgr-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
